php-src/ext/standard/tests/general_functions/escapeshellarg_bug71039.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: escapeshellarg(): Input string contains NULL bytes in /root/php-src/ext/standard/tests/general_functions/escapeshellarg_bug71039.php on line 2