php-src/ext/standard/tests/general_functions/escapeshellarg_bug71039.php
<?php
escapeshellarg("hello\0world");

?>
===DONE===
